<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jujutsu.tsne</groupId>
	<artifactId>tsne</artifactId>
	<!-- Major refactoring into two maven modules -->
	<!-- v2.0.0: Barnes Hut Implementation -->
	<!-- 2.1.0: Added support for configurable theta -->
	<!-- 2.2.0: Substantial improvements in parallelization -->
	<!-- 2.3.0: Substantial improvements in parallelization. Added parallelization of vp tree search -->
	<!-- 2.4.0: More parallelization -->
	<!-- 2.5.0: Moved TSneConfiguration to better package location -->
	<!-- 2.5.1: Added check method -->
	<!-- 2.6.0: Cleanups and simplification of some parallelism  -->
	<!-- 2.6.1: Fixed hanging in "Learning Embedding" with small datasets (https://github.com/lejon/T-SNE-Java/issues/14)  -->
	<!-- 2.6.2: More parallelization simplifications. Have seen up to 50% better performance, but this is not rigorously measured, but better performance than 2.5.1 for sure -->
	<version>2.6.2</version>
	<name>Java T-SNE</name>
	
	<properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
	
	<scm>
		<connection>scm:git:file:///home/eralljn/workspace/T-SNE-Java</connection>
	</scm>

	<dependencies>
		<dependency>
			<groupId>org.ejml</groupId>
			<artifactId>ejml-all</artifactId>
			<version>0.39</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.fommil.netlib</groupId>
			<artifactId>all</artifactId>
			<version>1.1.2</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.jblas</groupId>
			<artifactId>jblas</artifactId>
			<version>1.2.3</version>
		</dependency>
	</dependencies>
	
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-Build>${buildNumber}</Implementation-Build>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.6</version>
				<configuration>
					<createDependencyReducedPom>true</createDependencyReducedPom>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.jujutsu.tsne.TSneDemo</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
